--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,4 +3,4 @@ ports:
   onOpen: open-preview
 tasks:
 - init: /workspace/dash-with-gitpod/run.sh
-  command: python dash_intro.py
+  command: python3 dash_intro.py
