--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,7 @@
 ports:
 - port: 8050
   onOpen: open-preview
+- port: 8888
+  onOpen: open-browser
 tasks:
 - init: /workspace/dash-with-gitpod/run.sh
